<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_blue"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/g"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@color/grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/d1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/g1"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <CheckBox
                    android:id="@+id/d2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/g2"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <CheckBox
                    android:id="@+id/d3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/g3"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <CheckBox
                    android:id="@+id/d4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/g4"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <CheckBox
                    android:id="@+id/d5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/g5"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <CheckBox
                    android:id="@+id/d6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/g6"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                

                


            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>